tests/specs/ecosystem/apollo79/evtemitter/3_1_0.test
apollo79/evtemitter/3.1.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
   */ dispatchEvent<Ev extends Event>(event: Ev): boolean {
      ~~~~~~~~~~~~~
    at file://<tmpdir>/EventEmitter.ts:121:7

